[package]
name = "valuation-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "valuation-service"
path = "src/main.rs"

[[bin]]
name = "simple_main"
path = "src/bin/simple_main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
statrs = "0.16"
nalgebra = "0.32"
rand = "0.8"
rand_distr = "0.4"
reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"
