[package]
name = "valuation-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "valuation-service"
path = "src/main.rs"

[[bin]]
name = "simple_main"
path = "src/bin/simple_main.rs"

[[bin]]
name = "web_server"
path = "src/bin/web_server.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
nalgebra = "0.32"
rand = "0.8"
rand_distr = "0.4"
reqwest = { version = "0.11", features = ["json"] }
statrs = "0.16"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"
